--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up PHP environment (using PHP 8.2)
+      # Step 2: Set up PHP environment 
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2'  # Change to PHP 8.2 or higher
-          extensions: mysqli  # Add any required PHP extensions
+          php-version: '8.2'  
+          extensions: mysqli  
           coverage: none
 
       # Step 3: Install Composer
